fix: resolve flag icon visibility by using pre-built CSS
- Replace custom SCSS path configuration with flag-icons pre-built CSS
- Update both admin and survey apps to use the same approach
- Maintain custom override for English locale to use GB flag

--- a/apps/survey/src/scss/flags.scss
+++ b/apps/survey/src/scss/flags.scss
@@ -1,11 +1,5 @@
-$flag-icons-path: 'flag-icons/flags' !default;
-$flag-icons-rect-path: '/4x3' !default;
-$flag-icons-square-path: '/1x1' !default;
-$flag-icons-use-square: false !default;
-
-@import 'flag-icons/sass/flag-icons-base.scss';
-@import 'flag-icons/sass/flag-icons-list.scss';
+@import 'flag-icons/css/flag-icons.css';
 
 .fi-en {
-  background-image: url(#{$flag-icons-path}#{$flag-icons-rect-path}/gb.svg);
+  background-image: url(~flag-icons/flags/4x3/gb.svg);
 }
